# mutator

./: .gitignore  README.md  pyproject.toml
xml_signature_mutator/: afl_interface.py
xml_signature_mutator/.config/: logging.yaml  metrics.yaml
xml_signature_mutator/metrics/: dummy_metric.py  new_findings.py  valid_saml.py  well_formed.py
xml_signature_mutator/mutators/: change_attribute.py  change_reference.py  copy_subtree.py  delete_random_node.py  fallback_mutator.py  insert_cdata.py  insert_comment.py  insert_dtd.py  insert_element.py  insert_special_char.py  move_subtree.py  randomize_content.py  substitute_content.py
xml_signature_mutator/plugin_base/: base_metric.py  base_mutator.py  plugin_util.py
xml_signature_mutator/tests/.config/: logging.yaml  mutators.yaml
xml_signature_mutator/tests/input/: broken.xml  default.xml  object.xml  two-assertions.xml
